fix blurry loading spelling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </a>
 
 <a href="https://blurry-landing.rockitreading.com" target="_blank">
-    <div class="box lime"><h2>Blurry Landing</h2></div>
+    <div class="box lime"><h2>Blurry Loading</h2></div>
 </a>
 
 <a href="https://scroll-animation-original.rockitreading.com" target="_blank">
