added new box and fixed line 7 Aaarohi to Aarohi

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Aaarohi's project</title>
+    <title>Aarohi's project</title>
 </head>
 <body>
     <h1>Scroll to see my projects</h1>
+<a href=https://www.blogger.com/blog/posts/6772162042834255687 target="_blank">
+    <div class="box rose pink"><h2>My Blog</h2></div>
+</a>
+
 <a href="https://split-landing-page.rockitreading.com" target="_blank">
     <div class="box purple"><h2>Split Landing Page</h2></div>
 </a>
