changed rose pink to rose

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Scroll to see my projects</h1>
 <a href=https://www.blogger.com/blog/posts/6772162042834255687 target="_blank">
-    <div class="box rose pink"><h2>My Blog</h2></div>
+    <div class="box rose"><h2>My Blog</h2></div>
 </a>
 
 <a href="https://split-landing-page.rockitreading.com" target="_blank">
