changed blog link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Scroll to see my projects</h1>
-<a href=https://www.blogger.com/blog/posts/6772162042834255687 target="_blank">
+<a href=https://aarohipulipati.blogspot.com/ target="_blank">
     <div class="box rose"><h2>My Blog</h2></div>
 </a>
 
