Add home page from rotating navigation

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <li class="order-btn"><i class="fas fa-shopping-cart"></i><a href="https://forms.gle/yN5QcCxL5Ruace68A"> Order Now</a></li>
           </ul>
         </nav>
-        <h1><img src="images/logo512.png" alt="logo" class="logo-mini" /> Rock it Reading</h1>
+        <h1><img src="images/logo512.png" alt="logo" class="logo-mini" /> About Rock it Reading</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia in ratione dolores cupiditate, maxime aliquid impedit dolorem nam dolor omnis atque fuga labore modi veritatis porro laborum minus, illo, maiores recusandae cumque ipsa quos. Tenetur, consequuntur mollitia labore pariatur sunt quia harum aut. Eum maxime dolorem provident natus veritatis molestiae cumque quod voluptates ab non, tempore cupiditate? Voluptatem, molestias culpa. Corrupti, laudantium iure aliquam rerum sint nam quas dolor dignissimos in error placeat quae temporibus minus optio eum soluta cupiditate! Cupiditate saepe voluptates laudantium. Ducimus consequuntur perferendis consequatur nobis exercitationem molestias fugiat commodi omnis. Asperiores quia tenetur nemo ipsa.</p>
 
         <h3>Our Bookmarks</h3>
