updated home and about page content

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
-    <title>Rotating Navigation</title>
+    <title>About Us | Rock It Reading </title>
   </head>
   <body>
     <div class="container">
@@ -18,12 +18,18 @@
             <li class="order-btn"><i class="fas fa-shopping-cart"></i><a href="https://forms.gle/yN5QcCxL5Ruace68A"> Order Now</a></li>
           </ul>
         </nav>
-        <h1><img src="images/logo512.png" alt="logo" class="logo-mini" /> About Rock it Reading</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia in ratione dolores cupiditate, maxime aliquid impedit dolorem nam dolor omnis atque fuga labore modi veritatis porro laborum minus, illo, maiores recusandae cumque ipsa quos. Tenetur, consequuntur mollitia labore pariatur sunt quia harum aut. Eum maxime dolorem provident natus veritatis molestiae cumque quod voluptates ab non, tempore cupiditate? Voluptatem, molestias culpa. Corrupti, laudantium iure aliquam rerum sint nam quas dolor dignissimos in error placeat quae temporibus minus optio eum soluta cupiditate! Cupiditate saepe voluptates laudantium. Ducimus consequuntur perferendis consequatur nobis exercitationem molestias fugiat commodi omnis. Asperiores quia tenetur nemo ipsa.</p>
-
-        <h3>Our Bookmarks</h3>
-        <img src="https://images.unsplash.com/photo-1507146426996-ef05306b995a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="doggy" />
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit libero deleniti rerum quo, incidunt vel consequatur culpa ullam. Magnam facere earum unde harum. Ea culpa veritatis magnam at aliquid. Perferendis totam placeat molestias illo laudantium? Minus id minima doloribus dolorum fugit deserunt qui vero voluptas, ut quia cum amet temporibus veniam ad ea ab perspiciatis, enim accusamus asperiores explicabo provident. Voluptates sint, neque fuga cum illum, tempore autem maxime similique laborum odio, magnam esse. Aperiam?</p>
+        <h1><img src="images/logo512.png" alt="logo" class="logo-mini" /> About Us</h1>
+        <p>We are Aarohi and Nishi we started Rock It Reading because we loved to read and loved art so we decided to make bookmarks. We started making bookmarks a few years ago and have been making them ever since.</p>
+        <p>I am Aarohi Pulipati I am a rising 6th grader. I love to swim and go 
+          on airplanes. I am a resident of Mount Holly, North Carolina. Some of 
+          my hobbies are art, reading, watching bollywood movies, and robotics. 
+          My favorite movies are <a href="https://www.imdb.com/title/tt0330373/">Harry Potter Goblet Of Fire </a> and <a href="https://www.imdb.com/title/tt12844910/">Pathaan</a>. 
+          I enjoy doing outdoor activities with my dad. I also love making 
+          bookmarks with my mom. At school my favorite subjects are math and 
+          reading. I occassionally enjoy difficult lego projects and coding on
+           <a href="https://edabit.com/">edabit</a>. My recent travels and trips were to Europe - we visited Amsterdam, Strasburg, Brussels, Paris, Touslouse, and Spain, Universal Studios Florida, the 
+           Mountains and the family favorite - Topsail Beach.</p>
+        
       </div>
     </div>
     <script src="script.js"></script>
