--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
-    <title>Rotating Navigation</title>
+    <title>Rock It Reading</title>
   </head>
   <body>
     <div class="container">
@@ -19,11 +19,14 @@
           </ul>
         </nav>
         <h1><img src="images/logo512.png" alt="logo" class="logo-mini" /> Rock it Reading</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quia in ratione dolores cupiditate, maxime aliquid impedit dolorem nam dolor omnis atque fuga labore modi veritatis porro laborum minus, illo, maiores recusandae cumque ipsa quos. Tenetur, consequuntur mollitia labore pariatur sunt quia harum aut. Eum maxime dolorem provident natus veritatis molestiae cumque quod voluptates ab non, tempore cupiditate? Voluptatem, molestias culpa. Corrupti, laudantium iure aliquam rerum sint nam quas dolor dignissimos in error placeat quae temporibus minus optio eum soluta cupiditate! Cupiditate saepe voluptates laudantium. Ducimus consequuntur perferendis consequatur nobis exercitationem molestias fugiat commodi omnis. Asperiores quia tenetur nemo ipsa.</p>
+        <p>Rock it Reading is a bookmark company that produces handmade bookmarks. It is run by two young friends with big imaginations. The company was born during the Covid-19 quarantine. The girls started making bookmarks because it encouraged them to read more and brought them closer together. We asked the girls why they felt Rock It Reading was unique, they said “We feel our company is unique because we put energy into each of our bookmarks to make sure they all are fit for use”. They think Rock It Reading is the best company to purchase bookmarks from because they are all handmade and the company ensures that the customers are satisfied.
+
+        </p>
 
         <h3>Our Bookmarks</h3>
-        <img src="https://images.unsplash.com/photo-1507146426996-ef05306b995a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80" alt="doggy" />
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit libero deleniti rerum quo, incidunt vel consequatur culpa ullam. Magnam facere earum unde harum. Ea culpa veritatis magnam at aliquid. Perferendis totam placeat molestias illo laudantium? Minus id minima doloribus dolorum fugit deserunt qui vero voluptas, ut quia cum amet temporibus veniam ad ea ab perspiciatis, enim accusamus asperiores explicabo provident. Voluptates sint, neque fuga cum illum, tempore autem maxime similique laborum odio, magnam esse. Aperiam?</p>
+        <img src="images/img_06072.jpg" alt="doggy" />
+        <p>We have many varities of bookmarks as you can see in the picture above. Our ideas for the bookmarks come from games, nature, colors, and books. If you have something in particular then fill out our order form for it <a href="https://forms.gle/yN5QcCxL5Ruace68A" target="_blank">here</a> 
+        </p>
       </div>
     </div>
     <script src="script.js"></script>
