fixed the about us page

--- a/about.html
+++ b/about.html
@@ -20,16 +20,18 @@
         </nav>
         <h1><img src="images/logo512.png" alt="logo" class="logo-mini" /> About Us</h1>
         <p>We are Aarohi and Nishi we started Rock It Reading because we loved to read and loved art so we decided to make bookmarks. We started making bookmarks a few years ago and have been making them ever since.</p>
-        <p>I am Aarohi Pulipati I am a rising 6th grader. I love to swim and go 
-          on airplanes. I am a resident of Mount Holly, North Carolina. Some of 
-          my hobbies are art, reading, watching bollywood movies, and robotics. 
-          My favorite movies are <a href="https://www.imdb.com/title/tt0330373/">Harry Potter Goblet Of Fire </a> and <a href="https://www.imdb.com/title/tt12844910/">Pathaan</a>. 
-          I enjoy doing outdoor activities with my dad. I also love making 
-          bookmarks with my mom. At school my favorite subjects are math and 
-          reading. I occassionally enjoy difficult lego projects and coding on
-           <a href="https://edabit.com/">edabit</a>. My recent travels and trips were to Europe - we visited Amsterdam, Strasburg, Brussels, Paris, Touslouse, and Spain, Universal Studios Florida, the 
-           Mountains and the family favorite - Topsail Beach.</p>
-        
+        <div class="profile-container">
+          <img src="images/aarohi_about_1.jpg" alt="Aarohi" class="profile-pic" />
+          <div class="profile-desc">
+            I am Aarohi Pulipati I am a rising 6th grader. I love to swim and go 
+            on airplanes. I am a resident of Mount Holly, North Carolina. Some of 
+            my hobbies are art, reading, watching bollywood movies, and robotics. 
+            My favorite movies are <a href="https://www.imdb.com/title/tt0330373/"target="_blank">Harry Potter Goblet Of Fire </a> and <a href="https://www.imdb.com/title/tt12844910/"target="_blank">Pathaan</a>. 
+            I enjoy doing outdoor activities with my dad. I also love making 
+            bookmarks with my mom. At school my favorite subjects are math and 
+            reading. I occassionally enjoy difficult lego projects and coding on
+             <a href="https://edabit.com/"target="_blank">edabit</a>. My recent travels and trips were to Europe - we visited <a href="https://en.wikipedia.org/wiki/Amsterdam"target="_blank">Amsterdam</a>, <a href="https://en.wikipedia.org/wiki/Strasbourg"target="_blank">Strasbourg</a>, <a href="https://en.wikipedia.org/wiki/Brussels"target="_blank">Brussels</a>, <a href="https://en.wikipedia.org/wiki/Paris"target="_blank">Paris</a>, <a href="https://en.wikipedia.org/wiki/Toulouse"target="_blank">Toulouse</a>, and <a href="https://en.wikipedia.org/wiki/Spain"target="_blank">Spain</a>, <a href="https://en.wikipedia.org/wiki/Universal_Studios_Florida"target="_blank">Universal Studios Florida</a>, <a href="https://en.wikipedia.org/wiki/Pisgah_Mountain"target="_blank">Pisgah Mountain</a>  and the family favorite - <a href="https://en.wikipedia.org/wiki/Topsail_Island"target="_blank">Topsail Island</a>.</p>
+        </div> 
       </div>
     </div>
     <script src="script.js"></script>
