open form in new window

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><i class="fas fa-home"></i><a href="/"> Home</a></li>
             <li><i class="fas fa-binoculars"></i><a href="projects.html" target="projects"> Aarohi's Projects</a></li>
             <li><i class="fas fa-user-alt"></i><a href="about.html"> About</a></li>
-            <li class="order-btn"><i class="fas fa-shopping-cart"></i><a href="https://forms.gle/yN5QcCxL5Ruace68A"> Order Now</a></li>
+            <li class="order-btn"><i class="fas fa-shopping-cart"></i><a href="https://forms.gle/yN5QcCxL5Ruace68A" target="_blank"> Order Now</a></li>
           </ul>
         </nav>
         <h1><img src="images/logo512.png" alt="logo" class="logo-mini" /> Rock it Reading</h1>
