--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
       <div class="content">
         <nav>
           <ul>
-            <li><i class="fas fa-home"></i><a href="/"> Home</a></li>
-            <li><i class="fas fa-binoculars"></i><a href="projects.html" target="projects"> Aarohi's Projects</a></li>
-            <li><i class="fas fa-user-alt"></i><a href="about.html"> About</a></li>
-            <li class="order-btn"><i class="fas fa-shopping-cart"></i><a href="https://forms.gle/yN5QcCxL5Ruace68A" target="_blank"> Order Now</a></li>
+            <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="projects.html" target="projects"><i class="fas fa-binoculars"></i> Aarohi's Projects</a></li>
+            <li class="current"><a href="about.html"><i class="fas fa-user-alt"></i> About</a></li>
+            <li class="order-btn"><a href="https://forms.gle/yN5QcCxL5Ruace68A" target="_blank"><i class="fas fa-shopping-cart"></i> Order Now</a></li>
           </ul>
         </nav>
         <h1><img src="images/logo512.png" alt="logo" class="logo-mini" /> About Us</h1>
@@ -23,16 +23,22 @@
         <div class="profile-container">
           <img src="images/aarohi_about_1.jpg" alt="Aarohi" class="profile-pic" />
           <div class="profile-desc">
-            I am Aarohi Pulipati I am a rising 6th grader. I love to swim and go 
-            on airplanes. I am a resident of Mount Holly, North Carolina. Some of 
-            my hobbies are art, reading, watching bollywood movies, and robotics. 
-            My favorite movies are <a href="https://www.imdb.com/title/tt0330373/"target="_blank">Harry Potter Goblet Of Fire </a> and <a href="https://www.imdb.com/title/tt12844910/"target="_blank">Pathaan</a>. 
-            I enjoy doing outdoor activities with my dad. I also love making 
-            bookmarks with my mom. At school my favorite subjects are math and 
+            I am Aarohi Pulipati I am a rising 6th grader. I love to swim and go
+            on airplanes. I am a resident of Mount Holly, North Carolina. Some of
+            my hobbies are art, reading, watching bollywood movies, and robotics.
+            My favorite movies are <a href="https://www.imdb.com/title/tt0330373/"target="_blank">Harry Potter Goblet Of Fire </a> and <a href="https://www.imdb.com/title/tt12844910/"target="_blank">Pathaan</a>.
+            I enjoy doing outdoor activities with my dad. I also love making
+            bookmarks with my mom. At school my favorite subjects are math and
             reading. I occassionally enjoy difficult lego projects and coding on
-             <a href="https://edabit.com/"target="_blank">edabit</a>. My recent travels and trips were to Europe - we visited <a href="https://en.wikipedia.org/wiki/Amsterdam"target="_blank">Amsterdam</a>, <a href="https://en.wikipedia.org/wiki/Strasbourg"target="_blank">Strasbourg</a>, <a href="https://en.wikipedia.org/wiki/Brussels"target="_blank">Brussels</a>, <a href="https://en.wikipedia.org/wiki/Paris"target="_blank">Paris</a>, <a href="https://en.wikipedia.org/wiki/Toulouse"target="_blank">Toulouse</a>, and <a href="https://en.wikipedia.org/wiki/Spain"target="_blank">Spain</a>, <a href="https://en.wikipedia.org/wiki/Universal_Studios_Florida"target="_blank">Universal Studios Florida</a>, <a href="https://en.wikipedia.org/wiki/Pisgah_Mountain"target="_blank">Pisgah Mountain</a>  and the family favorite - <a href="https://en.wikipedia.org/wiki/Topsail_Island"target="_blank">Topsail Island</a>.</p>
-        </div> 
-      </div>
+             <a href="https://edabit.com/"target="_blank">edabit</a>. My recent travels and trips were to Europe - we visited <a href="https://en.wikipedia.org/wiki/Amsterdam" target="_blank">Amsterdam</a>, <a href="https://en.wikipedia.org/wiki/Strasbourg" target="_blank">Strasbourg</a>, <a href="https://en.wikipedia.org/wiki/Brussels" target="_blank">Brussels</a>, <a href="https://en.wikipedia.org/wiki/Paris" target="_blank">Paris</a>, <a href="https://en.wikipedia.org/wiki/Toulouse" target="_blank">Toulouse</a>, and <a href="https://en.wikipedia.org/wiki/Spain" target="_blank">Spain</a>, <a href="https://en.wikipedia.org/wiki/Universal_Studios_Florida" target="_blank">Universal Studios Florida</a>, <a href="https://en.wikipedia.org/wiki/Pisgah_Mountain" target="_blank">Pisgah Mountain</a>  and the family favorite - <a href="https://en.wikipedia.org/wiki/Topsail_Island" target="_blank">Topsail Island</a>.</p>
+           </div>
+       </div>
+        <div class="profile-container">
+          <img src="images/nishi_about_1.png" alt="Aarohi" class="profile-pic" />
+          <div class="profile-desc">
+            Hi, I’m Nishi. I am a rising seventh grader at Mountain Island Charter. I love traveling and hanging out at the pool. I have lived in North Carolina for my entire life, and I wouldn’t want to live anywhere else. In my free time, I like to read, do art, and watch movies. I enjoy tubing and going on cruises. My favorite subjects are math and social studies. I also like to make edits on <a href="https://www.capcut.com/" target="_blank">CapCut</a>. My favorite vacations I have been on are <a href="https://en.wikipedia.org/wiki/Punta_Cana" target="_blank">Punta Cana</a>, <a href="https://en.wikipedia.org/wiki/Hawaii" target="_blank">Hawaii</a>, and <a href="https://en.wikipedia.org/wiki/Walt_Disney_World" target="_blank">Disney World</a>.
+           </div>
+       </div>
     </div>
     <script src="script.js"></script>
   </body>
