--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <div class="content">
         <nav>
           <ul>
-            <li><i class="fas fa-home"></i><a href="/"> Home</a></li>
-            <li><i class="fas fa-binoculars"></i><a href="projects.html" target="projects"> Aarohi's Projects</a></li>
-            <li><i class="fas fa-user-alt"></i><a href="about.html"> About</a></li>
-            <li class="order-btn"><i class="fas fa-shopping-cart"></i><a href="https://forms.gle/yN5QcCxL5Ruace68A" target="_blank"> Order Now</a></li>
+            <li class="current"><a href="/"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="projects.html" target="projects"><i class="fas fa-binoculars"></i> Aarohi's Projects</a></li>
+            <li><a href="about.html"><i class="fas fa-user-alt"></i> About</a></li>
+            <li class="order-btn"><a href="https://forms.gle/yN5QcCxL5Ruace68A" target="_blank"><i class="fas fa-shopping-cart"></i> Order Now</a></li>
           </ul>
         </nav>
         <h1><img src="images/logo512.png" alt="logo" class="logo-mini" /> Rock it Reading</h1>
@@ -25,7 +25,7 @@
 
         <h3>Our Bookmarks</h3>
         <img src="images/img_06072.jpg" alt="doggy" />
-        <p>We have many varities of bookmarks as you can see in the picture above. Our ideas for the bookmarks come from games, nature, colors, and books. If you have something in particular then fill out our order form for it <a href="https://forms.gle/yN5QcCxL5Ruace68A" target="_blank">here</a> 
+        <p>We have many varities of bookmarks as you can see in the picture above. Our ideas for the bookmarks come from games, nature, colors, and books. If you have something in particular then fill out our order form for it <a href="https://forms.gle/yN5QcCxL5Ruace68A" target="_blank">here</a>
         </p>
       </div>
     </div>
